--- a/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.html
+++ b/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.html
@@ -441,7 +441,7 @@
         </div>
         <div class="float-end mt-4 mb-4" *ngIf="showQuoteActions">
             <button type="button" class="btn btn-primary me-3"
-                id="btnConvertPolicy">{{'gis.quotation.convert_to_policy' | translate}}</button>
+                id="btnConvertPolicy" (click)="convertToPolicy()">{{'gis.quotation.convert_to_policy' | translate}}</button>
             <button class="btn btn-primary" type="button" id="btnConvertQuote" data-bs-toggle="modal" data-bs-target="#convertQuote">
                 {{'gis.quotation.convert_to_normal_quote' | translate}}</button>
         </div>
