VQ-3603:AbAbility to fetch quotations during Revision and fixed client creation error

--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
@@ -347,11 +347,12 @@
 <br>
                                             <p-calendar
 
-                                            [(ngModel)]="selectedCoverToDate"
+                                            [(ngModel)]="passedCoverToDate"
                                             [dateFormat]="dateFormat"
                                             [showIcon]="true"
                                             [showButtonBar]="true"
                                             [minDate]="minDate"
+                                            [placeholder]="formattedCoverToDate"
                                             (onSelect)="onCoverToChange($event)">
                                           </p-calendar>
 
