--- a/src/app/features/gis/components/quotation/components/revise-reuse-quotation/revise-reuse-quotation.component.html
+++ b/src/app/features/gis/components/quotation/components/revise-reuse-quotation/revise-reuse-quotation.component.html
@@ -23,9 +23,13 @@
                     <div class="col-sm-9">
                         <div class="row">
                             <div class=" col-sm-4 col-12">
-                                <p-calendar [dateFormat]="dateFormat" [showIcon]="true" [showButtonBar]="true"
-                                    placeholder="Date from" [(ngModel)]="selectedDateFrom"
-                                    (ngModelChange)="onDateInputChange(selectedDateFrom)"
+                                <p-calendar 
+                                   
+                                    [dateFormat]="dateFormat" 
+                                    [showIcon]="true" 
+                                    [showButtonBar]="true"
+                                    placeholder="Date from"  
+                                    (onSelect)="onDateFromInputChange($event)"
                                     class="custom-calendar-height">
                                 </p-calendar>
 
@@ -33,7 +37,7 @@
                             <div class="col-12 col-sm-4">
                                 <p-calendar [dateFormat]="dateFormat" [showIcon]="true" [showButtonBar]="true"
                                     placeholder="Date to" [(ngModel)]="selectedDateFrom"
-                                    (ngModelChange)="onDateInputChange(selectedDateFrom)"
+                                    (ngModelChange)="onDateFromInputChange(selectedDateFrom)"
                                     class="custom-calendar-height">
                                 </p-calendar>
                             </div>
@@ -51,7 +55,8 @@
                 </div>
                 <div class="row mt-4 mb-4">
                     <div class="col-6 d-flex justify-content-start">
-                        <button type="button" class="btn btn-primary " id="search-buttons">
+                        <button type="button" class="btn btn-primary " id="search-buttons"
+                        (click)="fetchGISQuotations()">
                             Search</button>
                             <button type="button" class="btn btn-outline-primary ms-2 " id="search-buttons">
                                 Clear search</button>
