--- a/src/app/features/gis/components/quotation/components/quotation-conversion/quotation-conversion.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-conversion/quotation-conversion.component.html
@@ -129,7 +129,7 @@
         <!-- Effective From Date -->
         <div class="field mb-4 w-full">
           <label for="cover-From" class="quote-label required" id="cover-From">
-            {{'gis.quotation.effective_date' | translate}}</label>
+            Effective Date From</label>
           <p-calendar name="withEffectiveFromDate"
             [dateFormat]="dateFormat" [showIcon]="true" [showButtonBar]="true"
             [placeholder]="coverFrom ? coverFrom : todaysDate" [minDate]="minDate"
@@ -142,7 +142,7 @@
         <!-- Effective To Date -->
         <div class="field mb-4 w-full">
           <label for="cover-To" class="quote-label required" id="cover-To">
-            {{'gis.quotation.effective_date' | translate}}</label>
+            Effective Date To</label>
           <p-calendar name="withEffectiveToDate"
             [dateFormat]="dateFormat" [showIcon]="true" [showButtonBar]="true"
             [placeholder]="coverTo ? coverTo : todaysDate" [minDate]="minDate"
@@ -156,34 +156,50 @@
   <!-- Table Section -->
   <div class="table-section mt-4 mb-3">
     <p class="title mb-3">{{ 'gis.quotation.product_details' | translate }}</p>
-    <p-table [tableStyle]="{ 'min-width': '50px' }">
+    <p-table
+      #dt1
+      (onLazyLoad)="fetchGISQuotations($event)"
+      [autoLayout]="true"
+      [lazy]="true"
+      [paginator]="true"
+      [rowHover]="true"
+      [resizableColumns]="true"
+      [showCurrentPageReport]="true"
+      [rows]="pageSize || 5"
+      [totalRecords]="tableDetails.totalElements"
+      [value]="tableDetails.rows"
+      [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
+      responsiveLayout="stack"
+      [scrollable]="true"
+      scrollHeight="400px"
+      currentPageReportTemplate="{first} - {last} of {totalRecords}"
+      styleClass="p-datatable-sm">
       <ng-template pTemplate="header">
         <tr>
           <th style="background-color: #f0f0f0">{{ 'gis.quotation.quotation_number' | translate }}</th>
           <th style="background-color: #f0f0f0">{{ 'gis.quotation.client' | translate }}</th>
+          <th>Sum Assured</th>
+          <th style="background-color: #f0f0f0">{{'gis.quotation.premium' | translate}}</th>
           <th style="background-color: #f0f0f0">{{ 'gis.quotation.agent' | translate }}</th>
-          <th style="background-color: #f0f0f0">{{ 'gis.quotation.status' | translate }}</th>
+          <th>Date Created</th>
           <th style="background-color: #f0f0f0">{{ 'gis.quotation.cover_from' | translate }}</th>
           <th style="background-color: #f0f0f0">{{ 'gis.quotation.cover_to' | translate }}</th>
-          <th style="background-color: #f0f0f0"></th>
+          <th style="background-color: #f0f0f0">{{ 'gis.quotation.status' | translate }}</th>
+          <th>Action</th>
         </tr>
       </ng-template>
-      <ng-template pTemplate="body" let-product let-i="index">
-        <tr>
-          <td>{{ product.productShortDescription }}</td>
-          <td class="text-start" appCommaFormat>{{ product.totalSumInsured | number }}</td>
-          <td class="text-start" tooltipPosition="bottom">{{ product.totalTaxes | number }}</td>
-          <td class="text-start" appCommaFormat>{{ product.premium | number }}</td>
-          <td class="text-start" appCommaFormat>{{ product.totalPremium | number }}</td>
-          <td class="text-start" appCommaFormat>{{ product.totalPremium | number }}</td>
-          <td class="text-start" appCommaFormat><button>View Quotation</button></td>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="emptymessage">
-        <tr>
-          <td colspan="7" class="text-center py-4" id="empty">
-            {{ 'gis.quotation.no_data' | translate }}
-          </td>
+      <ng-template pTemplate="body" let-quotation>
+        <tr style="cursor: pointer" >
+          <td>{{ quotation?.quotationNumber || '' }}</td>
+          <td>{{ quotation?.clientName || '' }}</td>
+          <td>{{ quotation?.clientName ||''}}</td>
+          <td>{{ quotation?.clientName ||'' }}</td>
+          <td>{{ quotation?.agentShortDescription || '' }}</td>
+          <td>{{ quotation?.quotDate || '' | date:'short' }}</td>
+          <td>{{ quotation?.fromDate || '' }}</td>
+          <td>{{ quotation?.toDate || '' }}</td>
+          <td>{{ quotation?.status || '' }}</td>
+          <td>{{ "Process" }}</td>
         </tr>
       </ng-template>
     </p-table>
